Fixed a breadcrumb vertical alignment bug

--- a/src/components/breadcrumb/_breadcrumb.scss
+++ b/src/components/breadcrumb/_breadcrumb.scss
@@ -1,6 +1,6 @@
 
 /* =========================================================================
- * Svelto - Breadcrumb v0.2.0
+ * Svelto - Breadcrumb v0.2.1
  * =========================================================================
  * Copyright (c) 2015 Fabio Spampinato
  * Licensed under MIT (https://github.com/svelto/svelto/blob/master/LICENSE)
@@ -15,6 +15,12 @@
   display: inline-flex;
   align-items: center;
   margin-bottom: $gutter;
+
+  /* CHILDREN */
+
+  > * { //INFO: Remove children's margin bottom for proper vertical alignment
+    margin-bottom: 0;
+  }
 
   /* DIVIDER */
 
